--- a/Framework/pom.xml
+++ b/Framework/pom.xml
@@ -2,8 +2,8 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>javaselenium</groupId>
-	<artifactId>javaselenium</artifactId>
+	<groupId>Framework</groupId>
+	<artifactId>Framework</artifactId>
 	<version>4.13.0</version>
 
 	<dependencies>
@@ -53,7 +53,17 @@
     <artifactId>poi-ooxml</artifactId>
     <version>5.2.5</version>
 </dependency>
+
+<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.24</version>
+    <scope>provided</scope>
+</dependency>
 	</dependencies>
+	
+	
 	
 	<build>
 		<plugins>
@@ -64,11 +74,22 @@
         <version>3.2.3</version>
         <configuration>
           <suiteXmlFiles>
-            <suiteXmlFile>testng.xml</suiteXmlFile>
+            <suiteXmlFile>XML Files\testng.xml</suiteXmlFile>
           </suiteXmlFiles>
+          <properties>
+<maven.compiler.source>1.7</maven.compiler.source>
+    <maven.compiler.target>1.7</maven.compiler.target>
+</properties>
+
         </configuration>
       </plugin>
+      
    
 </plugins>
+
 	</build>
+	
+
+  
+	
 </project>
