--- a/Framework/pom.xml
+++ b/Framework/pom.xml
@@ -48,48 +48,52 @@
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
-<dependency>
-    <groupId>org.apache.poi</groupId>
-    <artifactId>poi-ooxml</artifactId>
-    <version>5.2.5</version>
-</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
+			<version>5.2.5</version>
+		</dependency>
 
-<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
-<dependency>
-    <groupId>org.projectlombok</groupId>
-    <artifactId>lombok</artifactId>
-    <version>1.18.24</version>
-    <scope>provided</scope>
-</dependency>
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.24</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
-	
-	
-	
+
+
 	<build>
 		<plugins>
- 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.2.3</version>
-        <configuration>
-          <suiteXmlFiles>
-            <suiteXmlFile>XML Files\testng.xml</suiteXmlFile>
-          </suiteXmlFiles>
-          <properties>
-<maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
-</properties>
 
-        </configuration>
-      </plugin>
-      
-   
-</plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.2.3</version>
+				<configuration>
+					
+					<properties>
+						<maven.compiler.source>1.7</maven.compiler.source>
+						<maven.compiler.target>1.7</maven.compiler.target>
+					</properties>
+					
+					<suiteXmlFiles>
+						<suiteXmlFile>XML Files\${xmlFiles}</suiteXmlFile>
+					</suiteXmlFiles>
+					
+					<systemPropertyVariables>
+						<executionBrowser>${Browser}</executionBrowser>
+						<appURL>${appTestURL}</appURL>
+					</systemPropertyVariables>
+
+				</configuration>
+			</plugin>
+
+
+		</plugins>
 
 	</build>
-	
 
-  
-	
+
 </project>
